// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextEditor /> render optional 1`] = `
<TextArea
  className="textarea-response"
  disabled={false}
  label={
    <h3>
      Your response
       (
      Optional
      )
    </h3>
  }
  name="text-response"
  onChange={[MockFunction onChange]}
  placeholder="Enter your response to the prompt above"
  value="value"
/>
`;

exports[`<TextEditor /> render required 1`] = `
<TextArea
  className="textarea-response"
  disabled={false}
  label={
    <h3>
      Your response
       (
      required
      )
    </h3>
  }
  name="text-response"
  onChange={[MockFunction onChange]}
  placeholder="Enter your response to the prompt above"
  value="value"
/>
`;
